# tarnished_ww

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
TARnISHED_WW/: forecast_functions.py  helper_functions.py  plots_functions.py  training.py
docs/: quick_start.qmd
notebooks/: Thumbs.db  XGBoostRegressor.ipynb  tarnished_ww.ipynb
references/: references.bib
src/tarnished_ww/: __init__.py  api.py  build_functions.py  config.py  data_processing.py  forecast_functions.py  helper_functions.py  io.py  plots_functions.py  rolling.py  schemas.py  simulate.py  training.py
src/tarnished_ww.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_testing_forecast.py  test_wastewater_censoring.py
