[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TARnISHED-WW"
version = "0.0.1"
description = "Time-series Analysis of Random Walkers for Infections Surveillance and
Hospital ED visits using WasteWater for attribution of emergency department visits to Influenza A, Sars-CoV-2, and RSV 
using wastewater signals and hierarchical Bayesian modelling."
authors = [
  { name = "Rebeca Cardim Falcao (BCCDC)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["TARnISHED-WW"]
force_sort_within_sections = true
