[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarnished-ww"
version = "0.1.0"
description = "Bayesian wastewater + ED joint model wrapper."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Rebeca Cardim Falcao"}]
dependencies = ["numpy", "pandas", "pymc", "pytensor", "arviz", "matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
